# pack-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.org
doc/internal/: queries.sql
src/: archive.rs  builder.rs  error.rs  kind.rs  lib.rs  main.rs  util.rs
test/fixtures/: notpack.db3  pack.db3
tests/: roundtrip.rs
