[package]
name = "pack-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Archiver/compressor using SQLite and Zstandard."
repository = "https://github.com/nlfiedler/pack-rs"
readme = "README.md"
keywords = ["archiver", "compressor"]
license = "MIT"

[dependencies]
clap = "4.5.4"
os_str_bytes = { version = "7.0.0", features = ["conversions"] }
thiserror = "1.0.58"
zstd = "0.13.1"

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.31.0", features = ["backup", "blob"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.31.0", features = ["backup", "blob", "bundled"] }
