[package]
name = "pack-rs"
version = "0.1.0"
edition = "2021"
authors = ["Nathan Fiedler <nathanfiedler@fastmail.fm>"]
description = "Archiver/compressor using SQLite and Zstandard."
repository = "https://github.com/nlfiedler/pack-rs"
readme = "README.md"
keywords = ["archiver", "compressor"]
license = "MIT"

[dependencies]
clap = "4.6"
os_str_bytes = { version = "7.2", features = ["conversions"] }
thiserror = "2.0"
zstd = "0.13"

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.40", features = ["blob"] }

[target.'cfg(windows)'.dependencies]
rusqlite = { version = "0.40", features = ["blob", "bundled"] }

[dev-dependencies]
tempfile = "3"
